[package]
name = "battlesnake"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
fern = { version = "0.6", features = [ "colored" ] }
anyhow = "1"
chrono = "0.4"

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }